# web3-rag

./: .env.sample  main.py  pyproject.toml
src/: extract_pdf.py
