[project]
name = "web3-rag"
version = "0.1.0"
description = "web3 information RAG knowledge base"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "faiss-cpu>=1.11.0",
    "numpy>=2.2.6",
    "pydantic-ai>=0.2.10",
    "pymupdf4llm>=0.0.24",
    "python-dotenv>=1.1.0",
    "sentence-transformers>=4.1.0",
]
